--- a/index.html
+++ b/index.html
@@ -184,13 +184,17 @@
       </div>
     </section>
 
-      <!-- Social Media -->
-    <div class="contact">
-      <a href="http://www.facebook.com" target="_blank"> <img src="images/facebook-logo.png" class="social-logo"></a>
-      <a href="http://www.instagram.com" target="_blank"> <img src="images/instagram-logo.jpg" class="social-logo"></a>
-      <a href="http://www.twitter.com" target="_blank"> <img src="images/twitter-logo.png" class="social-logo"></a>
+      <!-- Social Media - left old code in grey just in case old ones are preferred -->
+  <div class="row" id="contact">
+    <div class='col-12' id="social-logo">
+      <a href="http://www.facebook.com" target="_blank"> <i class="fab fa-facebook-square fa-3x"></i></a>
+<!-- img src="images/fb_banner.png" class="social-logo"></a> -->
+      <a href="http://www.instagram.com" target="_blank"> <i class="fab fa-instagram fa-3x"></i></a>
+<!--img src="images/instagram_banner.jpg" class="social-logo"></a> -->
+      <a href="http://www.twitter.com" target="_blank"> <i class="fab fa-twitter-square fa-3x"></i></a>
+<!--img src="images/twitter_banner" class="social-logo"></a> -->
     </div>
-
+</div>
 
   </body>
 </html>
