Revert "Menu Page"
This reverts commit 536fe5ab19b92b060a680493930376d7e77d352e.

--- a/index.html
+++ b/index.html
@@ -39,30 +39,30 @@
 
 
       <!-- Restaurant menu page-->
-      <div class="container-fluid" id="restaurant_menu">
-        <div class="row">
-          <div class="col-4">
-              <img src="pata-negra.jpg" class="zoom" width="450" height="300">
-          </div>
-          <div class="col-4">
-              <img src="burger-theory.jpg" class="zoom" width="450" height="300">
-          </div>
-          <div class="col-4">
-              <img src="biblos1.jpg" class="zoom" width="450" height="300">
-          </div>
+    <div class="container-fluid" id="restaurant_menu">
+      <div class="row">
+        <div class="col-4">
+            <img src="images/550X300 Placeholder.png" class="img-fluid">
         </div>
-        <div class="row">
-          <div class="col-4">
-              <img src="bristolian.jpg" class="zoom" width="450" height="300">
-          </div>
-          <div class="col-4">
-              <img src="steakoftheart.jpg" class="zoom" width="450" height="300">
-          </div>
-          <div class="col-4">
-              <img src="the-crafty-egg.jpg" class="zoom" width="450" height="300">
-          </div>
+        <div class="col-4">
+            <img src="images/550X300 Placeholder.png" class="img-fluid">
+        </div>
+        <div class="col-4">
+            <img src="images/550X300 Placeholder.png" class="img-fluid">
         </div>
       </div>
+      <div class="row">
+        <div class="col-4">
+            <img src="images/550X300 Placeholder.png" class="img-fluid">
+        </div>
+        <div class="col-4">
+            <img src="images/550X300 Placeholder.png" class="img-fluid">
+        </div>
+        <div class="col-4">
+            <img src="images/550X300 Placeholder.png" class="img-fluid">
+        </div>
+      </div>
+    </div>
 
     <div class="container-fluid" id="restaurant-details">
     <!-- Experimenting with Javascript
