--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>Bristol Eats</title>
+    <title>Featured</title>
 
     <!-- Stylesheets -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
@@ -14,18 +14,18 @@
   <body>
 
     <!-- Navigation -->
-    <nav id="navbar" class="navbar navbar-expand-lg navbar-dark">
-      <div class="navbar-nav">
-        <a class="nav-item nav-link" href=".\index.html#home">Home</a>
-        <a class="nav-item nav-link" href=".\index.html#restaurant_menu">Where to eat?</a>
-        <a class="nav-item nav-link" href=".\about.html">About Us</a>
-        <a class="nav-item nav-link" href=".\index.html#contact">Contact Us</a>
-      </div>
-    </nav>
+  <nav id="navbar" class="navbar navbar-expand-lg navbar-dark">
+    <div class="navbar-nav">
+      <a class="nav-item nav-link" href=".\index.html#home">Home</a>
+      <a class="nav-item nav-link" href=".\index.html#restaurant_menu">Where to eat?</a>
+      <a class="nav-item nav-link" href=".\about.html">About Us</a>
+      <a class="nav-item nav-link" href=".\index.html#contact">Contact Us</a>
+    </div>
+  </nav>
 
-      <!-- Title Page -->
+    <!-- Title Page -->
 
-      <!-- Background Image -->
+    <!-- Background Image -->
     <div class="bg">
       <div class="text-center" id="home">
         <!-- Title -->
@@ -38,163 +38,152 @@
     </div>
 
 
-      <!-- Restaurant menu page-->
+    <!-- Restaurant menu page-->
     <div class="container-fluid" id="restaurant_menu">
       <div class="row">
         <div class="col-4">
-            <img src="images/550X300 Placeholder.png" class="img-fluid">
+            <img src="Las-Iguanas-Bristol.jpg" class="zoom" width="450" height="300">
         </div>
         <div class="col-4">
-            <img src="images/550X300 Placeholder.png" class="img-fluid">
+            <img src="burger-theory.jpg" class="zoom" width="450" height="300">
         </div>
         <div class="col-4">
-            <img src="images/550X300 Placeholder.png" class="img-fluid">
+            <img src="biblos1.jpg" class="zoom" width="450" height="300">
         </div>
       </div>
       <div class="row">
         <div class="col-4">
-            <img src="images/550X300 Placeholder.png" class="img-fluid">
+            <img src="bristolian.jpg" class="zoom" width="450" height="300">
         </div>
         <div class="col-4">
-            <img src="images/550X300 Placeholder.png" class="img-fluid">
+            <img src="steakoftheart.jpg" class="zoom" width="450" height="300">
         </div>
         <div class="col-4">
-            <img src="images/550X300 Placeholder.png" class="img-fluid">
+            <img src="the-crafty-egg.jpg" class="zoom" width="450" height="300">
         </div>
       </div>
     </div>
 
-    <div class="container-fluid" id="restaurant-details">
-    <!-- Experimenting with Javascript
-    <script type="text/javascript">
-    function changeTextAlign () {
-    var name = $("restaurant");
-    var number = $(name+"x");
-    document.getElementbyId("restautant-details").style.textAlign;
-    }if(x === "2"){
-        text = "right";
-      }
-    </script>
-    -->
-      <!-- Restaurant 1 -->
-      <div class="row" id="restaurant1">
-        <div class="col-5" id="restaurant-image">
-          <img src="images/las_iguanas_banner.jpg" class="img-fluid1">
-        </div>
-        <div class="col-7" id="restaurant-description">
-          <h2><b>Las Iguanas</b></h2>
-          <p>Las Iguanas brings Rio vibes to the UK. Serving Latin American dishes made from scratch with passion, love and lots of Latin magic: you can expect a real party!</p>
-          <a href="https://www.iguanas.co.uk/">Celebrate the flavours of Latin America</a>
-        </div>
+<div class="container-fluid" id="restaurant-details">
+    <!-- Restaurant 1 -->
+    <div class="row" id="restaurant1">
+    <div class="col-4">
+      <img src="  " class="" width="400" height="250">
+    </div>
+      <div class="link-description col-8">
+        <h2>Pata Negra</h2>
+        <p>description</p>
+        <a href="  ">link to restaurant website</a>
       </div>
-
-
-      <!-- Restaurant 2 -->
-      <div class="row" id="restaurant2">
-        <div class="col-7" id="restaurant-description">
-          <h2><b>Burger Theory</b></h2>
-          <p>Burger Theory was developed following hundreds of recipe experiments. Now, the creativity keeps the passion alive! </p>
-          <a href="https://burgertheory.co.uk/">Join the burger explorers!</a>
-        </div>
-        <div class="col-5" id="restaurant-image">
-          <img src="images/burger_theory_banner.jpg" class="img-fluid">
-        </div>
-      </div>
-
-      <!-- Restaurant 3 -->
-      <div class="row" id="restaurant3">
-        <div class="col-5" id="restaurant-image">
-          <img src="images/biblos-banner.jpg" class="img-fluid">
-        </div>
-        <div class="col-7" id="restaurant-description">
-          <h2><b>Biblos</b></h2>
-          <p>The Biblos offers a fusion of Middle Eastern and Caribbean homemade cuisine. The cafe also serves wraps in three sizes: regular, large and the challenge!</p>
-          <a href="https://biblos.co.uk/">Are you up for the challenge?</a>
-        </div>
-      </div>
-
-      <!-- Restaurant 4 -->
-      <div class="row" id="restaurant4">
-        <div class="col-7" id="restaurant-description">
-          <h2><b>The Bristolian</b></h2>
-          <p>The Bristolian serves breakfast, lunch and dinner, with options ranging for vegan, veggie and meat choices. The menu has a daily special extension with fresh seasonal ingredients!</p>
-          <a href="http://www.thebristolian.co.uk/">Enjoy a drink and watch the world go by</a>
-        </div>
-        <div class="col-5" id="restaurant-image">
-          <img src="images/the_bristolian_banner.jpg" class="img-fluid">
-        </div>
-      </div>
-
-      <!-- Restaurant 5 -->
-      <div class="row" id="restaurant5">
-        <div class="col-5" id="restaurant-image">
-          <img src="images/steak_of_the_art_banner.jpg" class="img-fluid">
-        </div>
-        <div class="col-7" id="restaurant-description">
-          <h2><b>Steak of the Art</b></h2>
-          <p>Steak of the heart combines the passion for art and food for an exciting dining experience! It is original, fun and entertaining.</p>
-          <a href="https://www.steakoftheart.co.uk/">Come and enjoy original art and great food</a>
-        </div>
-      </div>
-
-      <!-- Restaurant 6 -->
-      <div class="row" id="restaurant6">
-        <div class="col-7" id="restaurant-description">
-          <h2><b>The Crafty Egg</b></h2>
-          <p>The Crafty Egg gives a new spin on brunch. Surrounded by street art, warm and friendly people; the extensive menu exceedes everyone's expectations!</p>
-          <a href="http://www.thecraftyegg.co.uk/">Engulf yourself in a relaxed, tranquil and casual setting</a>
-        </div>
-      <div class="col-5" id="restaurant-image">
-        <img src="images/the_crafty_egg_banner.jpg" class="img-fluid">
-      </div>
-
-    <!-- End of restaurant descriptions -->
     </div>
 
-    <!-- Contact Page -->
-    <section id="contact">
-      <div class="container">
-        <div class="row">
-          <div class="col-lg-8 mx-auto text-center">
-            <h2 class="section-heading">Let's Get In Touch</h2>
-            <hr class="my-4">
-            <p class="mb-5">If you have any questions!</p>
-          </div>
-        </div>
-
-        <!-- Contact Details -->
-        <div class="row">
-          <div class="col-lg-4 ml-auto text-center">
-            <i class="fa fa-phone fa-3x mb-3 sr-contact"></i>
-            <p>0117-456-678</p>
-          </div>
-          <div class="col-lg-4 mr-auto text-center">
-            <i class="fa fa-envelope fa-3x mb-3 sr-contact"></i>
-            <p>
-              <a href="mailto:abc@yahoo.com" target="_blank">abc@yahoo.com</a>
-            </p>
-          </div>
-          <div class="col-lg-4 mr-auto text-center">
-            <i class="fa fa-comment fa-3x mb-3 sr-contact"></i>
-            <p>
-              <a href="https://docs.google.com/forms/d/e/1FAIpQLScOfc4UjCCOS1I3S-Mz0izxDqXD-hMnaRJhHUOirgpy0yQb5g/viewform?embedded=true%22" target="_blank">Feedback!</a>
-            </p>
-          </div>
-        </div>
+    <!-- Restaurant 2 -->
+    <div class="row" id="restaurant2">
+      <div class="link-description col-8">
+        <h2>Burger Theory</h2>
+        <p>description</p>
+        <a href="https://burgertheory.co.uk/">link to restaurant website</a>
       </div>
-    </section>
-
-      <!-- Social Media - left old code in grey just in case old ones are preferred -->
-  <div class="row" id="contact">
-    <div class='col-12' id="social-logo">
-      <a href="http://www.facebook.com" target="_blank"> <i class="fab fa-facebook-square fa-3x"></i></a>
-<!-- img src="images/fb_banner.png" class="social-logo"></a> -->
-      <a href="http://www.instagram.com" target="_blank"> <i class="fab fa-instagram fa-3x"></i></a>
-<!--img src="images/instagram_banner.jpg" class="social-logo"></a> -->
-      <a href="http://www.twitter.com" target="_blank"> <i class="fab fa-twitter-square fa-3x"></i></a>
-<!--img src="images/twitter_banner" class="social-logo"></a> -->
+    <div class="col-4">
+      <img src="burger-theory-2.jpg" class="burgertheory" width="400" height="250">
     </div>
-</div>
+
+    </div>
+
+    <!-- Restaurant 3 -->
+    <div class="row" id="restaurant3">
+    <div class="col-4">
+      <img src="biblos-2.jpg" class="biblos" width="400" height="250">
+    </div>
+      <div class="link-description col-8">
+        <h2>Biblos</h2>
+        <p>description</p>
+        <a href="https://biblos.co.uk/">link to restaurant website</a>
+      </div>
+    </div>
+
+    <!-- Restaurant 4 -->
+    <div class="row" id="restaurant4">
+
+      <div class="link-description col-8">
+        <h2>The Bristolian</h2>
+        <p>description</p>
+        <a href="http://www.thebristolian.co.uk/">link to restaurant website</a>
+      </div>
+      <div class="col-4">
+        <img src="bristolian-breakfast.jpg" class="img-fluid" width="400" height="250">
+      </div>
+    </div>
+
+    <!-- Restaurant 5 -->
+    <div class="row" id="restaurant5">
+    <div class="col-4">
+      <img src="steakoftheart-steak.jpg" class="img-fluid" width="400" height="250">
+    </div>
+      <div class="link-description col-8">
+        <h2>Steak of the Art</h2>
+        <p>description</p>
+        <a href="https://www.steakoftheart.co.uk/">link to restaurant website</a>
+      </div>
+    </div>
+
+    <!-- Restaurant 6 -->
+    <div class="row" id="restaurant6">
+      <div class="link-description col-8">
+        <h2>The Crafty Egg</h2>
+        <p>description</p>
+        <a href="http://www.thecraftyegg.co.uk/">link to restaurant website</a>
+      </div>
+    <div class="col-4">
+      <img src="the-crafty-egg-food.jpeg" class="img-fluid" width="400" height="250">
+    </div>
+
+    </div>
+
+    <div>
+      <div class="contact">
+  </div>
+  <section id="contact">
+  <div class="container">
+    <div class="row">
+      <div class="col-lg-8 mx-auto text-center">
+
+        <br/>
+
+        <h2 class="section-heading">Let's Get In Touch!</h2>
+        <hr class="my-4">
+        <p class="mb-5">If you have any questions!</p>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-lg-4 ml-auto text-center">
+        <i class="fa fa-phone fa-3x mb-3 sr-contact"></i>
+        <p>0117-456-678</p>
+      </div>
+      <div class="col-lg-4 mr-auto text-center">
+        <i class="fa fa-envelope fa-3x mb-3 sr-contact"></i>
+        <p>
+          <a href="mailto:abc@yahoo.com" target="_blank">abc@yahoo.com</a>
+        </p>
+      </div>
+      <div class="col-lg-4 mr-auto text-center">
+        <i class="fa fa-comment fa-3x mb-3 sr-contact"></i>
+        <p>
+          <a href="https://docs.google.com/forms/d/e/1FAIpQLScOfc4UjCCOS1I3S-Mz0izxDqXD-hMnaRJhHUOirgpy0yQb5g/viewform?embedded=true%22" target="_blank">Feedback!</a>
+        </p>
+      </div>
+    </div>
+    <br>
+
+    </div>
+    <!-- Contact Us -->
+    <div class="contact">
+
+      <a href="http://www.facebook.com" target="_blank"> <img src="images/facebook-logo.png" class="social-logo"></a>
+      <a href="http://www.instagram.com" target="_blank"> <img src="images/instagram-logo.jpg" class="social-logo"></a>
+      <a href="http://www.twitter.com" target="_blank"> <img src="images/twitter-logo.png" class="social-logo"></a>
+    </div>
+
 
   </body>
 </html>
