--- a/about.html
+++ b/about.html
@@ -31,6 +31,9 @@
           <h1 class="about_title">About Us</h1>
         </div>
         <div class="row">
+          <p></p>
+        </div>
+        <div class="row">
           <div class="col-sm">
 
           </div>
