--- a/index.html
+++ b/index.html
@@ -42,24 +42,24 @@
       <div class="container-fluid" id="restaurant_menu">
         <div class="row">
           <div class="col-4">
-              <img src="images/550X300 Placeholder.png" class="img-fluid">
+              <img src="Las-Iguanas-Bristol.jpg" class="zoom" width="450" height="300">
           </div>
           <div class="col-4">
-              <img src="images/550X300 Placeholder.png" class="img-fluid">
+              <img src="burger-theory.jpg" class="zoom" width="450" height="300">
           </div>
           <div class="col-4">
-              <img src="images/550X300 Placeholder.png" class="img-fluid">
+              <img src="biblos1.jpg" class="zoom" width="450" height="300">
           </div>
         </div>
         <div class="row">
           <div class="col-4">
-              <img src="images/550X300 Placeholder.png" class="img-fluid">
+              <img src="bristolian.jpg" class="zoom" width="450" height="300">
           </div>
           <div class="col-4">
-              <img src="images/550X300 Placeholder.png" class="img-fluid">
+              <img src="steakoftheart.jpg" class="zoom" width="450" height="300">
           </div>
           <div class="col-4">
-              <img src="images/550X300 Placeholder.png" class="img-fluid">
+              <img src="the-crafty-egg.jpg" class="zoom" width="450" height="300">
           </div>
         </div>
       </div>
