Add links to images

--- a/index.html
+++ b/index.html
@@ -42,24 +42,24 @@
       <div class="container-fluid" id="restaurant_menu">
         <div class="row">
           <div class="col-4">
-              <img src="Las-Iguanas-Bristol.jpg" class="zoom" width="450" height="300">
+              <a href=".\index.html#restaurant1"><img src="Las-Iguanas-Bristol.jpg" class="zoom" width="450" height="300">
           </div>
           <div class="col-4">
-              <img src="burger-theory.jpg" class="zoom" width="450" height="300">
+              <a href=".\index.html#restaurant2"><img src="burger-theory.jpg" class="zoom" width="450" height="300">
           </div>
           <div class="col-4">
-              <img src="biblos1.jpg" class="zoom" width="450" height="300">
+              <a href=".\index.html#restaurant3"><img src="biblos1.jpg" class="zoom" width="450" height="300">
           </div>
         </div>
         <div class="row">
           <div class="col-4">
-              <img src="bristolian.jpg" class="zoom" width="450" height="300">
+              <a href=".\index.html#restaurant4"><img src="bristolian.jpg" class="zoom" width="450" height="300">
           </div>
           <div class="col-4">
-              <img src="steakoftheart.jpg" class="zoom" width="450" height="300">
+              <a href=".\index.html#restaurant5"><img src="steakoftheart.jpg" class="zoom" width="450" height="300">
           </div>
           <div class="col-4">
-              <img src="the-crafty-egg.jpg" class="zoom" width="450" height="300">
+              <a href=".\index.html#restaurant6"><img src="the-crafty-egg.jpg" class="zoom" width="450" height="300">
           </div>
         </div>
       </div>
